--- a/aula02/ex003.html
+++ b/aula02/ex003.html
@@ -5,15 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<style>
-    body{
-        background-color: black;
-        color: white;
-    }
-    p{
-        background-image: linear-gradient(to right, blue, red);
-    }
-</style>
 <body>
     <h1>Olá, Mundo!!</h1>
     <p>Já me livrei da maldição</p>
@@ -28,7 +19,8 @@
         String(s)
         s.toString
 
-        window.alert('A soma dos valores é ' + s)
+        //window.alert('A soma dos valores é ' + s)
+        window.alert(`A soma entre ${n1} + ${n2} = ${s}`)
     </script>
 
 </body>
