--- a/aula03/aula006.html
+++ b/aula03/aula006.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiro passos com o dom</title>
+    <style>
+        body{
+            background-color: rgba(38, 0, 255, 0.788);
+            color: white;
+            font:normal 18pt Arial;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Iniciando os estudo DOM</h1>
+    <p>Aqui vai o resultado </p>
+    <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript</p>
+    <div id="msg">Clique em mim</div>
+    <script>
+        var corpo = window.document.body
+        var p1 = window.document.getElementsByTagName('p')[1]
+        window.document.write('Esta escrito assim ' + p1.innerHTML)
+        p1.style.color = 'blue'
+        corpo.style.background = 'black'
+
+        //var a = window.document.getElementById('msg')
+        //a.style.background = 'green'
+
+        var d = window.document.querySelector('div#msg')
+        d.style.background = 'blue'
+
+    </script>
+
 </body>
 </html>
