--- a/aula04/aula008.html
+++ b/aula04/aula008.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somando Valores</title>
+    <style>
+        div#resultado{
+            background-color: black;
+            color: white;
+            font: normal 20px arial;
+            text-align: center;
+            width: 200px;
+            height: 40px;
+            border-radius: 20px;
+            padding: 20px 10px 20px 10px;
+            margin: 20px 10px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Somando Valores</h1>
+    <input type="number" name="txtn1" id="txtn1"> +
+    <input type="number" name="txtn2" id="txtn2">
+    <input type="button" value="somar" onclick="somar()">
+    <div id="resultado">Resultado</div>
+
+    <script>
+        function somar(){
+            var tn1 = window.document.getElementById('txtn1')
+            var tn2 = window.document.querySelector('input#txtn2')
+            var n1 = Number(tn1.value)
+            var n2 = Number(tn2.value)
+            var somar = n1 + n2
+            resultado.innerHTML = `A soma entre ${n1} + ${n2} = ${somar}`
+        }
+    </script>
+
 </body>
 </html>
