--- a/desafios/desafio01/ex001.html
+++ b/desafios/desafio01/ex001.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="ex1.style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>ola mundo</h1>
+        <h1>Hora do dia</h1>
     </header>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
+  
     <section>
-
+        <div id="msg">
+            Aqui vai aparecer a imagem
+        </div>
+        <div id="foto">
+            <img id="imagem" src="" alt="Foto dia">
+        </div>
     </section>
     <footer>
-
+        <a href="https://www.linkedin.com/in/alexdso/" target="_blank"><img src="fotos/linkedin.png" alt=""> Meu contato</a>
     </footer>
-
+    <script src="script.js" target=""></script>
 </body>
 </html>
