--- a/desafios/desafio01/ex001.html
+++ b/desafios/desafio01/ex001.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="icon/Tatice-Cristal-Intense-Java.ico" type="image/x-icon">
+    <title>Horas do dia</title>
     <link rel="stylesheet" href="ex1.style.css">
 </head>
 <body onload="carregar()">
