--- a/desafios/desafio02/ex001.html
+++ b/desafios/desafio02/ex001.html
@@ -38,7 +38,7 @@
 
     </section>
     <footer>
-        <a href="https://www.linkedin.com/in/alexdso/" target="_blank"><img src="fotos/linkedin.png" alt=""> Meu contato</a>
+        <a href="https://www.linkedin.com/in/alexdso/" target="_blank">Meu contato</a>
     </footer>
     <script src="script.js"></script>
 </body>
