--- a/desafios/desafio03/ex001.html
+++ b/desafios/desafio03/ex001.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contando</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div>
             <p>Início: <input type="number" name="inicio" id="inicio"></p>
 
-            <p>Fim:   <input type="number" name ="fim" id="fim"></p>
+            <p>Fim:<input type="number" name ="fim" id="fim"></p>
 
             <p>Passo: <input type="numbem" name="Passo" id="passo"></p>
 
@@ -28,7 +28,7 @@
     </section>
 
     <footer>
-        <a href="https://www.linkedin.com/in/alexdso/" target="_blank"><img src="fotos/linkedin.png" alt=""> Meu contato</a>
+        <a href="https://www.linkedin.com/in/alexdso/" target="_blank">Meu contato</a>
     </footer>
     <script src="script.js"></script>
 
