--- a/desafios/desafio04/ex001.html
+++ b/desafios/desafio04/ex001.html
@@ -14,14 +14,14 @@
 
     <section>
         <div>
-            <p>Número: <input type="number" name="tabuada" id="tabuada">
+            <p>Número: <input type="number" name="numero" id="numero">
             
             <input type="button" value="Gerar Tabuada" onclick="gerar()">
             </p>
         </div>
 
         <div id="resultado">
-            <input type=""  >
+            
         </div>
     </section>
 
@@ -30,7 +30,6 @@
     </footer>
 
     <script src="script.js"></script>
-
 
 </body>
 </html>
