--- a/desafios/desafio03/ex001.html
+++ b/desafios/desafio03/ex001.html
@@ -17,7 +17,7 @@
 
             <p>Fim:<input type="number" name ="fim" id="fim"></p>
 
-            <p>Passo: <input type="numbem" name="Passo" id="passo"></p>
+            <p>Passo: <input type="number" name="Passo" id="passo"></p>
 
             <input type="button" value="Contar" onclick="contador()">
 
